# week3_4/miniBlog/routes/userRoutes.js
@@ -1,0 +1,10 @@
+const router = require("express").Router();
+const userControllers = require("../controllers/userControllers.js");
+
+// GET all users
+router.get("/users", userControllers.getAllUsers);
+
+// GET a single user
+router.get("/user/:id", userControllers.getUser);
+
+module.exports = router;
